--- a/.github/workflows/build-userscript.yml
+++ b/.github/workflows/build-userscript.yml
@@ -32,10 +32,10 @@ jobs:
 
       - name: Commit bundle
         run: |
-          if ! git diff --quiet -- dist/bundle.user.js; then
-            git config user.name "github-actions[bot]"
-            git config user.email "github-actions[bot]@users.noreply.github.com"
-            git add dist/bundle.user.js
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
+          git add dist/bundle.user.js
+          if ! git diff --cached --quiet; then
             git commit -m "chore: update userscript bundle [skip ci]"
             git push
           else
